--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+** You can consider this project abandoned. The new version is available at https://github.com/lozzd/nagdash or if you do not want to use the nagios-api, please seek Naglite3. **
+
+
 # Naglite2 v0.1 -
 #	A full screen Nagios viewer intended for NOC/monitoring screens. 
 #
